tables have fixed height & scrolls when it overflows

--- a/frontend/src/css/Index.css
+++ b/frontend/src/css/Index.css
@@ -141,8 +141,8 @@
 }
 
 .savedContent{
-    /* height: 230vh;
-    width: 100vh;
+    height: 230vh;
+    /* width: 100vh;
     margin-right: 20px;
     margin-left: 20px;
     justify-content: center;
